--- a/.github/workflows/cross-build.yml
+++ b/.github/workflows/cross-build.yml
@@ -33,10 +33,12 @@ jobs:
         if: runner.os != 'Windows'
       - name: Binary name
         if: startsWith(matrix.os, 'ubuntu')
+        run: echo "Ubuntu"
         env:
           binary_os_prefix: 'linux'
       - name: Binary name
         if: startsWith(matrix.os-name, 'mac')
+        run: echo "Mac"
         env:
           binary_os_prefix: 'darwin'
       - name: Upload binary
