--- a/.github/workflows/cross-build.yml
+++ b/.github/workflows/cross-build.yml
@@ -38,7 +38,8 @@ jobs:
         if: runner.os != 'Windows'
       - name: 'Get Version Number'
         run: |
-          echo "::set-env name=VERSION::$(./gradlew properties -q | grep "version:" | awk '{print $2}')"
+          ARTIFACT_VERSION=$(./gradlew properties -q | grep "version:" | awk '{print $2}')"
+          echo "VERSION=${ARTIFACT_VERSION}" >> $GITHUB_ENV
       - name: Upload binary
         uses: actions/upload-artifact@v2
         with:
