--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: 18
           cache: yarn
+          cache-dependency-path: "./docs/yarn-lock.json"
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
