--- a/.github/workflows/docs-test-deploy.yml
+++ b/.github/workflows/docs-test-deploy.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 18
           cache: yarn
-          cache-dependency-path: "./docs/yarn-lock.json"
+          cache-dependency-path: "./docs/yarn.lock"
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
