--- a/.github/workflows/docs-test-deploy.yml
+++ b/.github/workflows/docs-test-deploy.yml
@@ -20,6 +20,10 @@ jobs:
           cache-dependency-path: "./docs/yarn.lock"
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: |
+          cd docs
+          yarn install --frozen-lockfile
       - name: Test build website
-        run: yarn build
+        run: |
+          cd docs
+          yarn build
